--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
     display:flex;
     justify-content:left;
     background: #000000;
-    opacity: 0.8;
+    opacity:0.8;
     height: 47.5px;
     margin-top: -14px;
     margin-left: -10px;
@@ -85,7 +85,7 @@
 .menu_deroulant_lateral{
     justify-content:left;
     background: #000000;
-    opacity: 0.8;
+    background:rgba(0, 0, 0, 0.8);
     margin-top: 100px;
     padding: 50px 0;
     transform: scale(0);
@@ -140,42 +140,6 @@ span.fleche{
     height:40px;
 }
 
-/*
-.flanc_droit .menu_deroulant_lateral > a{
-    margin: 10px;
-}
-
-.niveau1{
-    transform: scale(0);
-    transition: all 0s ease 300s;
-    width: 190px;
-}
-
-.flanc_droit .menu_deroulant_lateral li { 
-    width:200px;
-    margin:0;
-    height:30px;
-}
-
-.flanc_droit .menu_deroulant_lateral li { 
-    width:200px;
-    margin:0;
-    height:fit-content;
-}
-
-.droite img, .bas img{
-    width:15px;
-    height:15px;
-}
-
-button{
-    background: #000000;
-    border: 0;
-}
-/*
-.presentation, .europe, .amerique, .inde, .issue, .impacts{
-    height:fit-content;
-} */
 
 .presentation:hover .niveau1,
 .europe:hover .niveau1,
@@ -193,7 +157,7 @@ button{
 
 .cadre{
     background-color: #000000;
-    opacity: 0.7;
+    background:rgba(0, 0, 0, 0.7);
     display:block;
     margin-top: 20%;
     margin-left: 10%;
@@ -204,7 +168,8 @@ button{
     padding-bottom: 10%;
     font-family: sans-serif;
     padding-top: 5%;
-    z-index: 2;
+    position:relative;
+    z-index: 1;
 }
 
 .cadre h3, .cadre p
@@ -228,12 +193,6 @@ button{
 
 .cadre p:first-child{
     margin-bottom: 40px;
-}
-
-.cadre map area
-{
-    color:#000000;
-    opacity: 0.4;
 }
 
 p{
@@ -341,6 +300,7 @@ div.cliquable{
     height: 10%;
     width: 7%;
     transform:scale(0.9);
+    transform:rotate(-45deg);
     transition: .5s;
 }
 
@@ -410,13 +370,258 @@ div.cliquable{
 }
 
 rect.hoverable{
-    fill:rgba(0, 0, 0, 0.6);;
+    fill:rgba(0, 0, 0, 0.5);;
     stroke-width: 0;
     cursor: pointer;
     transition:.5s;
 }
 
 rect.hoverable:hover{
-    fill:rgba(0, 0, 0, 0.8);
+    fill:rgba(0, 0, 0, 0.7);
     transition:.5s;
 }
+
+/*Specifique Europe*/
+
+img.carte_europe{
+    background:rgba(0, 0, 0, 1);
+}
+
+/*zone cliquable Europe*/
+
+.allemagne-zone{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 22.5%;
+    left: 30%;
+    width: 30%;
+    height: 26%;
+}
+
+rect.hoverable-allemagne{
+    fill:rgba(24, 87, 22, 0);
+    stroke-width: 2%;
+    stroke:rgba(24, 87, 22, 0.5);
+    cursor: pointer;
+    transition:.5s;
+}
+
+rect.hoverable-allemagne:hover{
+    stroke: rgba(24, 87, 22, 0.7);
+    fill:rgba(24, 87, 22, 0.1);
+    stroke-width: 3%;
+    transition:.5s
+}
+
+.royaume-france{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 45%;
+    left: 26.5%;
+    width: 8%;
+    height: 7%;
+}
+
+.saint-empire{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 35%;
+    left: 36%;
+    width: 9.5%;
+    height: 9%;
+}
+
+.royaume-espagne{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 70%;
+    left: 10.7%;
+    width: 9%;
+    height: 8%;
+}
+
+.royaume-grande-bretagne{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 26%;
+    left: 12%;
+    width: 9%;
+    height: 8%;
+}
+
+.royaume-prusse{
+    position:absolute;
+    transform: scale(0.9) rotate(-26deg);
+    transition:all .5s;
+    top: 28.5%;
+    left: 43%;
+    width: 12%;
+    height: 3%; 
+}
+
+.republique-deux-nations{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 28.3%;
+    left: 58.3%;
+    width: 14.5%;
+    height: 8.5%;
+}
+
+.monarchie-habsbourg{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 49.8%;
+    left: 50.2%;
+    width: 16.5%;
+    height: 4%;
+}
+
+.electorat-hanovre{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 28%;
+    left: 39.5%;
+    width: 5%;
+    height: 4.5%;
+}
+
+.empire-russe{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 23.2%;
+    left: 76.5%;
+    width: 17.3%;
+    height: 5.3%;
+}
+
+.royaume-suede{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 11%;
+    left: 45%;
+    width: 7.5%;
+    height: 5.5%;
+}
+
+.royaume-portugal{
+    position: absolute;
+    transform: scale(0.9) rotate(-70deg);
+    transition: all .5s;
+    top: 66.4%;
+    left: -0.3%;
+    width: 11.8%;
+    height: 3%;
+}
+
+rect.hoverable-pays{
+    fill:rgba(132, 69, 2, 0);
+    stroke-width: 4%;
+    stroke:rgba(132, 69, 2, 0.5);
+    cursor: pointer;
+    transition:.5s;
+}
+
+rect.hoverable-pays:hover{
+    stroke: rgba(132, 69, 2, 0.7);
+    fill:rgba(132, 69, 2, 0.2);
+    stroke-width: 5%;
+    transition:.5s
+}
+
+.royaume-portugal:hover, .royaume-suede:hover, .empire-russe:hover, .electorat-hanovre:hover,
+.monarchie-habsbourg:hover, .republique-deux-nations:hover, .royaume-prusse:hover,
+.royaume-grande-bretagne:hover, .royaume-espagne:hover,.saint-empire:hover, .royaume-france:hover,
+.minorque:hover, .carthagene:hover, .quiberon-belle-ile:hover{
+    transform:scale(1);
+    transition: .5s;
+}
+
+.royaume-prusse:hover{
+    transform:rotate(-26deg);
+}
+
+.royaume-portugal:hover{
+    transform:rotate(-70deg);
+}
+
+.minorque{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 72.5%;
+    left: 26.5%;
+    width: 4%;
+    height: 4%;
+}
+
+.carthagene{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 78.5%;
+    left: 16%;
+    width: 4%;
+    height: 4%;
+}
+
+.quiberon-belle-ile{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 42.5%;
+    left: 17.3%;
+    width: 4%;
+    height: 4%;
+}
+
+circle.hoverable{
+    fill:rgba(0, 0, 150, 0);
+    stroke-width: 10%;
+    stroke:rgba(0, 0, 150, 0.5);
+    cursor: pointer;
+    transition:.5s;
+}
+
+circle.hoverable:hover{
+    stroke: rgba(0, 0, 150, 0.7);
+    fill:rgba(0, 0, 150, 0.2);
+    stroke-width: 12%;
+    transition:.5s
+}
+
+.almeida{
+    position:absolute;
+    transform:scale(0.9);
+    transition:all .5s;
+    top: 62.5%;
+    left: 6.2%;
+    width: 4%;
+    height: 4%;
+}
+
+circle.hoverable-almeida{
+    fill:rgba(150, 0, 0, 0);
+    stroke-width: 10%;
+    stroke:rgba(150, 0, 0, 0.5);
+    cursor: pointer;
+    transition:.5s;
+}
+
+circle.hoverable-almeida:hover{
+    stroke: rgba(150, 0, 0, 0.7);
+    fill:rgba(150, 0, 0, 0.2);
+    stroke-width: 12%;
+    transition:.5s
+}
+
