--- a/CSS/style.css
+++ b/CSS/style.css
@@ -923,6 +923,9 @@ circle.hoverable-almeida:hover{
     text-align: center;
     color: #b1b1b1;
     margin-top: 30px;
+}
+
+.retour a{
     text-decoration: none;
 }
 
